# Jade

./: .gitignore  CMakeLists.txt  README.md
data/1/: path.txt  vertices.txt
include/: BaseFunc.h  BaseParameter.h
include/AABB_Tree/: AABB_Tree.h  TinyVector.h
include/Math/: Algorithms.h  MPoint3.h  MVector3.h  Massage.h  Mrgb.h
include/PolyMesh/: IOManager.h  MemoryPool.h  PolyMesh.h  PolyMeshIterators.h  PolyMesh_Base.h
src/: AABB_Tree.cpp  IOManger.cpp  PolyMesh.cpp  PolyMeshIterators.cpp  PolyMesh_Base.cpp
src/Asag_Deformation/: Asag_deformation.cpp  Asag_deformation.h  main.cpp
src/Bilateral_Normal_Filtering/: Filter.cpp  Filter.h  main.cpp
src/Curvature/: Curvature.cpp  Cuvature.h  main.cpp
src/Deformation/: arap-deformation.cpp
src/Dijk_Prim/: Algorithm.cpp  Algorithm.h  main.cpp
src/Field/: Field.cpp
src/Mesh-Filter/: Filter.cpp  main.cpp
src/Parameterizations/: main.cpp  mean_value_param.cpp  parameterizations.cpp  parameterizations.h
src/Parametrization/: main.cpp  mean_value_param.cpp  parametrization.cpp  parametrization.h
src/Simplification_Remeshing/: Incremental_Remeshing.cpp  Optimal_Delaunay_Triangulation.cpp  QEM.cpp  Variational_Shape_Approximation.cpp
src/dijk-prim/: Algorithm.cpp  Algorithm.h
src/mesh-filter/: Filter.h
src/rigid_shape_interpolation/: rigid_shape_interpolation.cpp
